--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,6 +42,11 @@
             </a>
           </li>
           {% endif %}
+          {% if site.codepen_username %}
+          <li>
+            <a href="http://codepen.io/{{ site.codepen_username }}">Codepen</a>
+          </li>
+          {% endif %}
         </ul>
       </div>
 
